<?xml version="1.0" encoding="utf-8"?>

<!--提示窗帮助信息-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shangyuan_jiaojuxing_down"
    android:orientation="vertical">

    <TextView
        android:id="@+id/help_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/what"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_16"/>

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/how"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_size_14"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/selector_help_info_button"
        android:text="@string/x"
        android:textColor="#0000fb"/>
</LinearLayout>
