<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent"
    android:gravity="bottom" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_bottom_bg"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pop_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="5dip"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/pop_camera_take_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@drawable/selector_common_red_bg"
            android:text="@string/activity_setting_name_and_head_take_pic_camera"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/pop_ablum_take_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/selector_common_red_bg"
            android:text="@string/activity_setting_name_and_head_take_pic_ablum"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="或"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/pop_cancel_take_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:textColor="@android:color/black"
            android:background="@drawable/selector_common_white_bg"
            android:text="@string/activity_setting_name_and_head_take_pic_cancel"/>
    </LinearLayout>

</RelativeLayout>