<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#f0f0f0"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="12dp"
                android:background="@drawable/hrt_to_left_arrow"
                android:contentDescription="@string/image" />
        </LinearLayout>

        <TextView
            android:id="@+id/value_card_time_recharge_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/time_value_form"
            android:textColor="@android:color/black"
            android:textSize="22sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/time_section"
            android:textColor="@android:color/holo_red_light"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_time1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="--" />

            <EditText
                android:id="@+id/et_time2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="--" />

            <EditText
                android:id="@+id/et_time3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="--" />

            <EditText
                android:id="@+id/et_time4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="--" />

            <EditText
                android:id="@+id/et_time5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button_no"
                android:text="@string/reset"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button_no"
                android:text="@string/ok"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f0f0f0"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/spread_pie_chart"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp">

        </com.github.mikephil.charting.charts.PieChart>

    </LinearLayout>
</LinearLayout>